<?xml version="1.0"?>
<package format="2">
  <name>udp_2_imu</name>
  <version>0.0.1</version>
  <description>UDP IMU receiver with ROS Imu publisher.</description>
  <maintainer email="you@example.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
